# ai-sudoku-solver

./: .gitignore  README.md  requirements-dev.txt  setup.cfg
.github/workflows/: pytest.yml
ai-soduku-solver/: solution.py
ai-soduku-solver/old_udacity-pa/: old_jwt  projects.py
ai-soduku-solver/tests/: conftest.py  test_solution.py
ai_soduku_solver/: solution.py
ai_soduku_solver/tests/: test_solution.py
