[metadata]
name = ai_sudoku_solver
version = attr: ai_sudoku_solver.VERSION
author = Ramy Rashad
author_email = ra.rashad@gmail.com
description = AI-driven solver for Sudoku puzzles
long_description = file: README.md
license = BSD-3-Clause
classifiers =
    Programming Language :: Python :: 3

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.7
install_requires =
    pandas
    importlib-metadata; python_version<"3.8"

[options.package_data]
* = *.txt, *.rst, *.md

[options.entry_points]
console_scripts =
    sudoku-solver = ai_sudoku_solver.solution:main()

[options.extras_require]
test = 
    pytest
    pytest-cov

[options.packages.find]
exclude =
    ai_sudoku_solver.images*
    ai_sudoku_solver.ojbects*
    ai_sudoku_solver.tests*
