[metadata]
name = ai-sudoku-solver
version = attr: ai-sudoku-solver.VERSION
author = Ramy Rashad
author_email = ra.rashad@gmail.com
description = AI-driven solver for Sudoku puzzles
long_description = file: README.md
license = BSD-3-Clause
classifiers =
    Programming Language :: Python :: 3

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.7
install_requires =
    pandas

[options.package_data]
* = *.txt, *.rst, *.md

[options.entry_points]
console_scripts =
    sudoku-solver = ai-sudoku-solver.solution:main()

[options.extras_require]
test = 
    pytest
    pytest-cov
    flake8
    black
    pre-commit

[options.packages.find]
exclude =
    ai-sudoku-solver.images*
    ai-sudoku-solver.ojbects*
    ai-sudoku-solver.tests*
